--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+*{
+    font-size: 1.04em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#drum-machine{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.panel{
+    background-color: rgb(83, 85, 86);
+    width: 60%;
+    border: 2px solid rgb(112, 165, 32);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.action{
+    margin-top: 5px;
+    background-color: black;
+}
+.pad{
+    
+    padding: 10px;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.App-link {
-  color: #61dafb;
+.pad .drum-pad {
+    width: 100%;
+    height: 80px;
+    outline: none;
+    font-size: 24px;
+    cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
+.control{
+    padding: 10px;
 }
